[package]
name = "tarantool-test-macro"
version = "0.1.0"
authors = ["Chertov Maxim <chertovmv@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "./src/lib.rs"
proc-macro = true

[dependencies]
anyhow = "1"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

parking_lot = "0.11"
lazy_static = "1"
